# my_ros2_ws

./: .gitignore
scripts/: start_sitl_3drone.sh
src/: v1.14
src/mission_interfaces/: CMakeLists.txt  package.xml
src/mission_interfaces/action/: CircleMission.action
src/mission_interfaces/msg/: GlobalMission.msg  RelayStatus.msg
src/mission_interfaces/srv/: RelayHandoff.srv
src/offboard_control_pkg/: package.xml  px4_takeoff_flow.drawio  setup.cfg  setup.py  test.py
src/offboard_control_pkg/config/: slam_params.yaml
src/offboard_control_pkg/launch/: jetson_multi.launch.py  sitl_circle_test.launch.py  sitl_multi.launch.py
src/offboard_control_pkg/offboard_control_pkg/: drone_node.py  fast_scan_node.py  multi_drone_sender.py  multi_drone_visualizer.py  offboard_control.py  real_drone_node.py  signal_sim_node.py  slam_launch.py  swarm_controller_node.py  voice_commander.py
