<?xml version="1.0"?>
<package format="3">
  <name>offboard_control_pkg</name>
  <version>0.1.0</version>
  <description>Offboard Control for PX4 using ROS2 and MAVROS</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <depend>px4_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>